@@ -319,6 +319,7 @@ extern char * sdp_get_ansi_version_str(int version, int buff_len,
                 char * buff);
 extern char * sdp_get_pdt_doc_str(int version, int buff_len,
                 char * buff);
+extern int sdp_strcase_eq(const char * s1p, const char * s2p);
 
 /*
  * Declarations for functions found in sdparm_vpd.c
